Attempting to fix horizontal scrollbar on windows

--- a/_sass/_portfolio.scss
+++ b/_sass/_portfolio.scss
@@ -184,7 +184,6 @@ header {
 
 #portfolio section {
   padding: 75px 0;
-  overflow: auto;
 
   @media(min-width:768px) {
     padding: 75px 0;
